@@ -23,6 +23,8 @@
   * Added a function to rephase a visibility data dictionary to a new pointing center
   * Improved the visibility simulation speed in lsl.sim.vis
   * Added try...except blocks to lsl.common.metabundle to clean up after failed functions
+  * Added append() functions to Project and Session in lsl.common.sdf to make it easier to add sessions and observations
+  * Added a setSpectrometerMetatag() function to lsl.common.sdf.Session to make setting the metatag easier
 
 0.6.6
   * Fixed a problem with older NumPy installs not having a close() function
